tests/ui/const-generics/mgca/tuple_expr_arg_bad-issue-151048.stderr
error: expected `usize`, found `([1, 2], 3, [4, 5])`
  --> $DIR/tuple_expr_arg_bad-issue-151048.rs:5:19
   |
LL |     stuff: [u8; { ([1, 2], 3, [4, 5]) }],
   |                   ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

